--- a/RemoveQuotesExtension/manifest.json
+++ b/RemoveQuotesExtension/manifest.json
@@ -2,11 +2,11 @@
     "manifest_version": 3,
     "name": "Remove Quotes on Copy for NocoDB",
     "version": "1.0",
-    "description": "Removes double quotes from copied text on noco.bvmodel.cloud",
-    "permissions": ["clipboardRead", "clipboardWrite"],
+    "description": "Removes double quotes from copied text and makes URLs clickable on noco.bvmodel.cloud",
+    "permissions": ["clipboardRead", "clipboardWrite", "dom"],
     "content_scripts": [
       {
-        "matches": ["http://noco.bvmodel.cloud/*"],
+        "matches": ["http://noco.bvmodel.cloud/*", "https://noco.bvmodel.cloud/*"],
         "js": ["content.js"]
       }
     ]
